# wazo-chatd

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG-connectors.md  CHANGELOG.md  Dockerfile  Jenkinsfile  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
alembic/: env.py  script.py.mako
alembic/versions/: 007194bcaee2_add_last_activity_to_presence.py  4ca51d8f3bb2_add_connector_models.py  543bc8a0045f_remove_endpoint_states.py  55c3b35d4b4c_add_channel_state_cache.py  67850df6768f_create_channel_table.py  6ba500c45fcc_add_dnd_to_presence.py  6c169ed5b4d3_create_message_table.py  777e588c50f3_add_progressing_state.py  7b47d171ebf7_create_device_table.py  7b47d171ebf7_create_endpoint_table.py  8c20afd7bd4b_create_room_table.py  ad182697a1cc_migrate_to_uuid_type.py  b96789d13584_add_the_refresh_token_table.py  baseline-2514.sql  (+10 more)
debian/: changelog  control  copyright  rules  wazo-chatd.config  wazo-chatd.dirs  wazo-chatd.install  wazo-chatd.links  wazo-chatd.logrotate  wazo-chatd.postinst  wazo-chatd.service  wazo-chatd.templates
docs/: connector-protocol.md
integration_tests/: Dockerfile-chatd  Dockerfile-db  Makefile  test-requirements-for-tox.txt  test-requirements.txt
integration_tests/assets/connectors/test-connector/: pyproject.toml
integration_tests/assets/connectors/test-connector/test_connector/: connector.py
wazo_chatd/: asyncio_.py  auth.py  bus.py  config.py  controller.py  exceptions.py  http.py  http_hooks.py  http_server.py  init_db.py  main.py  thread_manager.py
(+236 files in other folders)
