[project]
name = "wazo-chatd-connector-mock"
version = "0.1.0"
description = "Test connector backend for wazo-chatd integration tests"
requires-python = ">=3.11"
dependencies = ["requests"]

[project.entry-points."wazo_chatd.connectors"]
test = "test_connector.connector:TestConnector"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
